Change log for duff
===================

Maintained since version 0.3.1.

2012-01-22  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.c: Clarified help for -H and -L flags.
 * duff.c: Added list of supported digest functions to help for -d flag.

2012-01-20  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.1: Added missing -type f to example (credits to Stephan Hegel).

2012-01-19  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.h: Tagged functions error and warning with GCC attributes.
 * duff.1: Clarified default sampling limit.
 * duffdriver.c: Renamed cluster index variable to index.

2012-01-18  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.1: Clarified language regarding -t and %d.
 * duff.1: Made the output of examples human-readable.

2012-01-16  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.1: Added new cluster header to description of -f flag.
 * duff.c (main): Added error if thorough mode output uses digest (credits to
 Kamal Mostafa and Mika Kuoppala).
 * duff.c (main): Added non-digest default cluster header for thorough mode.
 * duffutil.c duff.h: Added function cluster_header_uses_digest.

2011-04-11  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.c (main): Made cluster header translatable.
 * duffutil.c (error): Changed exit status to EXIT_FAILURE.
 * duffdriver.c (process_path): Split file processing into process_file function.
 * duffdriver.c (process_file): Reverted to old behaviour of skipping block devices.

2011-04-10  gettextize  <bug-gnu-gettext@gnu.org>

 * Makefile.am (SUBDIRS): Add po.
   (ACLOCAL_AMFLAGS): New variable.
   (EXTRA_DIST): Add config.rpath, m4/ChangeLog.
 * configure.ac (AC_OUTPUT): Add po/Makefile.in.

2011-04-10  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.c duff.h duffdriver.c duffentry.c: Changed gettext macro to _.
 * gettext.h: Added file to lib directory.
 * duff.c (usage): Improved grammar in help text.