@@ -5,6 +5,8 @@ Maintained since version 0.3.1.
 
 2012-01-22  Camilla Berglund  <elmindreda@elmindreda.org>
 
+ * duff.c duff.h duffentry.c: Changed sampling to read (up to) the first
+ SAMPLE_SIZE bytes (credits to Kamal Mostafa).
  * duff.c: Clarified help for -H and -L flags.
  * duff.c: Added list of supported digest functions to help for -d flag.
 
